--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,14 @@
     
     <dependencies>
         <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10</version>
+        </dependency>
+        <dependency>
             <groupId>com.arm.mbed.cloud.sdk</groupId>
             <artifactId>mbed-cloud-sdk</artifactId>
-            <version>1.2.6</version>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -77,17 +82,17 @@
         <dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-pubsub</artifactId>
-            <version>v1-rev380-1.23.0</version>
+            <version>v1-rev398-1.24.1</version>
         </dependency>
         <dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-cloudiot</artifactId>
-            <version>v1-rev24-1.23.0</version>
+            <version>v1-rev42-1.24.1</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
-            <version>0.9.0</version>
+            <version>0.9.1</version>
         </dependency>
     </dependencies>
 
@@ -95,7 +100,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.3</version>
+                <version>3.2.2</version>
                 <configuration>
                     <warName>${project.artifactId}-${project.version}</warName>
                     <archive>
@@ -137,7 +142,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.6</version>
+                <version>3.1.1</version>
                 <executions>
                     <execution>
                         <phase>validate</phase>
@@ -164,7 +169,7 @@
                             <goal>unpack-dependencies</goal>
                         </goals>
                         <configuration>
-                            <includeGroupIds>org.eclipse.jetty,javax.servlet,org,com,io</includeGroupIds>
+                            <includeGroupIds>org.eclipse.jetty,javax.servlet,org,com,io,jada,arm</includeGroupIds>
                             <excludeArtifactIds>jsp-api,jstl</excludeArtifactIds>
                             <excludes>META-INF/ECLIPSEF.*</excludes>
                             <outputDirectory>
