updates 17 - config file migration and updates

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -1,11 +1,11 @@
 #
 # @file    service.properties
-# @brief   properties for the connector-bridge service
+# @brief   properties for the pelion-bridge service
 # @author  Doug Anson
 # @version 1.0
 # @see
 #
-# Copyright 2015. ARM Ltd. All rights reserved.
+# Copyright 2018. ARM Ltd. All rights reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -18,103 +18,46 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
-# mDS/mDC-specific mDS Peer Processor configuration
-#
-config_fields=api_key;api_endpoint_address;mqtt_address;mqtt_port;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
-api_endpoint_address=api.us-east-1.mbedcloud.com
-api_key=Your_Connector_API_Token_Goes_Here
-mds_version=3.0
-mds_skip_validation_override=false
-mds_domain=domain
-mds_def_domain=default
-mds_def_ep_type=mbed-endpoint
-mds_domain_listener=false
-mds_domain_listener_sleep_interval_ms=10000
-mds_admin_port=8081
-mds_admin_username=admin
-mds_admin_password=admin
-mds_domain_uri=admin-api/rd
-mds_content_type=application/json
-mds_port=80
-mds_username=app2
-mds_password=secret
-mds_use_api_token=true
-mds_webhook_validator_poll_ms=60000
-mds_webhook_validator_enable=true
-mds_webhook_retry_max_tries=10
-mds_bridge_error_level=info,warning,critical
-mds_device_attributes_path=/3/0
-mds_device_attributes_content_type=application/vnd.oma.lwm2m+tlv
 
 #
-# Experimental: bulk subscriptions
-#
-mds_enable_bulk_subscriptions=false
-
-#
-# ThreadExecutor configuration
-#
+# Jetty Threading Configuration
+# 
 threads_core_pool_size=1000
 threads_max_pool_size=1000000
 threads_keep_alive_time=60
 
 #
-# Enable unified formatting to the greatest extent possible for CoAP payloads
+# Pelion Processor configuration
 #
+api_key=Your_Pelion_API_Key_Goes_Here
+mds_enable_long_poll=true
+api_endpoint_address=api.us-east-1.mbedcloud.com
+mds_gw_port=28520
+mds_def_ep_type=default
+mds_content_type=application/json
+mds_device_attributes_path=/3/0
+mds_device_attributes_content_type=application/vnd.oma.lwm2m+tlv
 unified_format_enabled=true
-
-#
-# mDS/mDC REST Versioning
-#
-mds_enable_rest_versions=true
 mds_rest_version=2
-
-#
-# Polling vs. Notification Enablement
-#
-mds_enable_long_poll=false
 mds_long_poll_uri=notification/pull
-
-#
-# Other mDS Peer Processor configuration
-#
-mds_bridge_empty_string=0
-mds_gw_address=127.0.0.1
-mds_use_gw_address=false
-mds_gw_port=28519
-mds_gw_context_path=/connector-bridge
-mds_gw_console_path=/Console
+mds_gw_context_path=/pelion-bridge
 mds_gw_events_path=/events
-mds_gw_callback=callback
-mds_default_notify_url=http\://127.0.0.1\:8083/dsevents
-mds_gw_use_ssl=true
-mds_use_https_dispatch=true
 mds_gw_keystore_password=arm1234
 
+# Debugging levels (info == lots!!)
+mds_bridge_error_level=warning,critical
+# mds_bridge_error_level=info,warning,critical
+
 #
-# Default Bridge DeviceInfo
+# Defaulted bridge device information
 #
 mds_bridge_manufacturer=ARM
 mds_bridge_serial_number=0123456789
 mds_bridge_model=software
 mds_bridge_class=Bridge
-mds_bridge_description=MBED Cloud Bridge
+mds_bridge_description=arm PELION Device Shadow Bridge
 mds_bridge_firmware_info=v1.0
 mds_bridge_hardware_info=v1.0
-# mds_bridge_descriptive_location=Bluemix Container
-
-#
-# Default Device Metadata Resource URIs
-#
-mds_device_manufacturer_res=/dev/mfg
-mds_device_serial_number_res=/dev/serial
-mds_device_model_res=/dev/model
-mds_device_class_res=/dev/class
-mds_device_description_res=/dev/description
-mds_device_firmware_info_res=/dev/firmware
-mds_device_hardware_info_res=/dev/hardware
-mds_device_descriptive_location_res=/dev/location
 
 #
 # We can add multiple MQTT brokers to interact with here: 
@@ -130,18 +73,9 @@ mds_device_descriptive_location_res=/dev/location
 #mqtt_mgr_config=iotf-d;std
 
 #
-# REQUESTs coming in from MQTT are prefaced with this tag
-#
-mds_mqtt_request_tag=request
-
-#
-# Master Node: if distributed database enabled, then we can act as a non-master node
-#
-is_master_node = true
-
-#
 # EXPERIMENTAL: Distributed Database Enablement (with MongoDB)
 #
+is_master_node = true
 enable_distributed_db_cache=false
 distributed_db_tablename_delimiter=_
 distributed_db_ip_address=MongoDB_IP_Address_Goes_Here
@@ -153,6 +87,8 @@ distributed_db_password=MongoDB_Password_Goes_Here
 # Generic MQTT Peer Processor Configuration
 #
 enable_generic_mqtt_processor=true
+# MQTT: config_fields=api_key;mqtt_address;mqtt_port;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;api_endpoint_address;mds_enable_long_poll;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# GETSTARTED: config_fields=api_key;api_endpoint_address;mds_enable_long_poll;mqtt_address;mqtt_port;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 mqtt_address=Your_MQTT_broker_IP_address_Goes_Here
 mqtt_port=1883
 mqtt_username=off
@@ -177,28 +113,20 @@ mqtt_debug_creds=false
 mqtt_no_client_creds=false
 mqtt_import_keystore=false
 mqtt_pubkey_pem_filename=pubkey.pem
-
-#
-# Topic Root for generic MQTT (cannot be more than 1 level (ie. not "arm/mbed".. that's two levels).. 
-#
 mqtt_mds_topic_root=mbed
-
-#
-# 3rd Party REST Peer Processor Support (SAMPLE)
-#
-enable_3rd_party_rest_processor=false
+mds_mqtt_request_tag=request
 
 #
 # IBM Watson IoT MQTT Peer Processor Add-On
 #
 enable_iotf_addon=false
+# config_fields=api_key;iotf_api_key;iotf_auth_token;api_endpoint_address;iotf_legacy_bridge;mds_enable_long_poll;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 iotf_device_data_key=d
+iotf_mqtt_port=1883
 iotf_org_id=<ORG_ID GOES HERE>
 iotf_org_key=<IoTF ORG_KEY_GOES_HERE>
 iotf_auth_token=<IoTF AUTH TOKEN GOES HERE>
 iotf_api_key=a-__ORG_ID__-__API_KEY__
-iotf_mqtt_ip_address=23.246.232.210
-iotf_mqtt_port=1883
 iotf_observe_notification_topic=iot-2/type/__DEVICE_TYPE__/id/__EPNAME__/evt/__EVENT_TYPE__/fmt/json
 iotf_coap_cmd_topic=iot-2/type/__DEVICE_TYPE__/id/__EPNAME__/cmd/__COMMAND_TYPE__/fmt/json
 iotf_client_id_template=a\:__ORG_ID__\:
@@ -206,9 +134,9 @@ iotf_use_rti_format=false
 iotf_force_app_binding=false
 iotf_rest_uri_template=/api/v0002/device/types
 iotf_rest_hostname_template=__ORG_ID__.internetofthings.ibmcloud.com
-iotf_gw_id=mbedConnectorBridge
-iotf_gw_type_id=mbedBridge
-iotf_gw_dev_type_id=mbedDevice
+iotf_gw_id=PelionDeviceBridge
+iotf_gw_type_id=PelionBridge
+iotf_gw_dev_type_id=PelionDeviceShadow
 iotf_add_gw_type_template={\"id\":\"__GW_TYPE_ID__\",\"classId\":\"Gateway\"}
 iotf_add_gw_dev_type_template={\"id\":\"__TYPE_ID__\",\"classId\":\"Device\"}
 iotf_add_gw_template={\"deviceId\":\"__GW_ID__\",\"authToken\":\"__AUTH__\" __DEVICE_INFO__}
@@ -219,7 +147,9 @@ iotf_legacy_bridge=false
 # MS IoTHub MQTT Peer Processor Add-On
 #
 enable_iot_event_hub_addon=false
+# config_fields=api_key;iot_event_hub_name;iot_event_hub_sas_token;api_endpoint_address;mds_enable_long_poll;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 iot_event_hub_name=IoT_Event_Hub_Name_Goes_Here
+iot_event_hub_sas_token=Valid_SAS_Token_Goes_Here
 iot_event_hub_mqtt_username=__IOT_EVENT_HUB__.azure-devices.net/__EPNAME__
 iot_event_hub_mqtt_password=HostName=__IOT_EVENT_HUB__.azure-devices.net;DeviceId=__EPNAME__;SharedAccessKey=__EPNAME_KEY__
 iot_event_hub_mqtt_ip_address=__IOT_EVENT_HUB__.azure-devices.net
@@ -227,7 +157,6 @@ iot_event_hub_mqtt_port=1883
 iot_event_hub_observe_notification_topic=devices/__EPNAME__/messages/events/
 iot_event_hub_coap_cmd_topic=devices/__EPNAME__/messages/devicebound/#
 iot_event_hub_api_version=2016-02-03
-iot_event_hub_sas_token=Valid_SAS_Token_Goes_Here
 iot_event_hub_device_id_url=https://__IOT_EVENT_HUB__.azure-devices.net/devices/__EPNAME__?api-version=__API_VERSION__
 iot_event_hub_add_device_json={ deviceId:"__EPNAME__",status:"enabled",statusReason:""}
 iot_event_hub_enable_device_id_prefix=true
@@ -238,27 +167,24 @@ iot_event_hub_version_tag=api-version=2016-11-14
 # AWS IoT MQTT Peer Processor Add-On
 #
 enable_aws_iot_gw_addon=false
-aws_iot_policy_name=mbed-connector-bridge-policy
-aws_iot_policy_document={\"Version\":\"2012-10-17\",\"Statement\":[{\"Action\":[\"iot:*\"],\"Resource\":[\"*\"],\"Effect\":\"Allow\"}]}
-aws_iot_observe_notification_topic=__TOPIC_ROOT__/observation/__DEVICE_TYPE__/__EPNAME__
-aws_iot_coap_cmd_topic=__TOPIC_ROOT__/__COMMAND_TYPE__/__DEVICE_TYPE__/__EPNAME__/#
+# config_fields=api_key;aws_iot_region;aws_iot_access_key_id;aws_iot_secret_access_key;api_endpoint_address;mds_enable_long_poll;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 aws_iot_region=AWS_region_goes_here
 aws_iot_access_key_id=AWS_Access_Key_ID_goes_here
 aws_iot_secret_access_key=AWS_Secret_Access_Key_goes_here
-#
-# Topic Root for AWS (cannot be more than 1 level (ie. not "arm/mbed".. that's two levels).. 
-#
+aws_iot_policy_name=pelion-device-bridge-policy
+aws_iot_policy_document={\"Version\":\"2012-10-17\",\"Statement\":[{\"Action\":[\"iot:*\"],\"Resource\":[\"*\"],\"Effect\":\"Allow\"}]}
+aws_iot_observe_notification_topic=__TOPIC_ROOT__/observation/__DEVICE_TYPE__/__EPNAME__
+aws_iot_coap_cmd_topic=__TOPIC_ROOT__/__COMMAND_TYPE__/__DEVICE_TYPE__/__EPNAME__/#
 aws_iot_topic_root=mbed
 
 #
-# Cleanup thread sleep time for AWS Device Manager
-#
-aws_cleanup_thread_sleeptime_ms=120000
-
-#
-# Google Cloud Pub/Sub MQTT Peer Processor Add-On
+# Google CloudIoT MQTT Peer Processor Add-On
 #
 enable_google_cloud_addon=false
+# config_fields=api_key;api_endpoint_address;google_cloud_auth_json;google_cloud_region;mds_enable_long_poll;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+google_cloud_region=Google_Cloud_Region_Goes_Here
+google_cloud_auth_json=Google_Cloud_Auth_Json_Goes_Here
+google_cloud_registry_name=PelionDeviceRegistry
 google_cloud_obs_auto_subscribe=true
 google_cloud_mqtt_host=mqtt.googleapis.com
 google_cloud_mqtt_port=1883
@@ -273,15 +199,5 @@ google_cloud_key_length=2048
 google_cloud_cert_days_length=100000
 google_cloud_key_create_cmd_template=openssl req -x509 -nodes -newkey rsa:__KEY_LENGTH__ -keyout __PRIV_KEY_FILE__ -days __NUM_DAYS__ -out __CERT_FILE__ -subj /CN=unused
 google_cloud_key_convert_cmd_template=openssl pkcs8 -topk8 -inform PEM -outform DER -in __PRIV_KEY_FILE__ -nocrypt -out __PRIV_KEY_PKCS8__
-#
-# Configure These...
-#
-google_cloud_region=Google_Cloud_Region_Goes_Here
-google_cloud_auth_json=Google_Cloud_Auth_Json_Goes_Here
-google_cloud_registry_name=mbedDeviceRegistry
-
-#
-# Topic Root for Google Cloud (cannot be more than 1 level (ie. not "arm/mbed".. that's two levels).. 
-#
 google_cloud_topic_root=mbed
 google_wait_for_lock_ms=3500
