--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -43,6 +43,7 @@ mds_long_poll_uri=notification/pull
 mds_gw_context_path=/pelion-bridge
 mds_gw_events_path=/events
 mds_gw_keystore_password=arm1234
+mds_gw_address=off
 
 # Debugging levels (info == lots!!)
 mds_bridge_error_level=warning,critical
@@ -87,9 +88,9 @@ distributed_db_password=MongoDB_Password_Goes_Here
 # Generic MQTT Peer Processor Configuration
 #
 enable_generic_mqtt_processor=false
-# MQTT: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mqtt_address;mqtt_port;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# MQTT: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mqtt_address;mqtt_port;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 # MQTT: mqtt_address=Your_MQTT_broker_IP_address_Goes_Here
-# GETSTARTED: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mqtt_address;mqtt_port;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# GETSTARTED: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mqtt_address;mqtt_port;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 # GETSTARTED: mqtt_address=127.0.0.1
 mqtt_port=1883
 mqtt_username=off
@@ -121,7 +122,7 @@ mds_mqtt_request_tag=request
 # IBM Watson IoT MQTT Peer Processor Add-On
 #
 enable_iotf_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;iotf_api_key;iotf_auth_token;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;iotf_api_key;iotf_auth_token;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 iotf_device_data_key=d
 iotf_mqtt_port=1883
 iotf_org_id=<ORG_ID GOES HERE>
@@ -148,7 +149,7 @@ iotf_legacy_bridge=false
 # MS IoTHub MQTT Peer Processor Add-On
 #
 enable_iot_event_hub_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;iot_event_hub_name;iot_event_hub_sas_token;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;iot_event_hub_name;iot_event_hub_sas_token;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 iot_event_hub_name=IoT_Event_Hub_Name_Goes_Here
 iot_event_hub_sas_token=Valid_SAS_Token_Goes_Here
 iot_event_hub_mqtt_username=__IOT_EVENT_HUB__.azure-devices.net/__EPNAME__
@@ -168,7 +169,7 @@ iot_event_hub_version_tag=api-version=2016-11-14
 # AWS IoT MQTT Peer Processor Add-On
 #
 enable_aws_iot_gw_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;aws_iot_region;aws_iot_access_key_id;aws_iot_secret_access_key;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;aws_iot_region;aws_iot_access_key_id;aws_iot_secret_access_key;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 aws_iot_region=AWS_region_goes_here
 aws_iot_access_key_id=AWS_Access_Key_ID_goes_here
 aws_iot_secret_access_key=AWS_Secret_Access_Key_goes_here
@@ -182,7 +183,7 @@ aws_iot_topic_root=mbed
 # Google CloudIoT MQTT Peer Processor Add-On
 #
 enable_google_cloud_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;google_cloud_auth_json;google_cloud_region;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;google_cloud_auth_json;google_cloud_region;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 google_cloud_region=Google_Cloud_Region_Goes_Here
 google_cloud_auth_json=Google_Cloud_Auth_Json_Goes_Here
 google_cloud_registry_name=PelionDeviceRegistry
