--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -20,7 +20,7 @@
 # limitations under the License.
 
 #
-# Jetty Threading Configuration
+# Jetty Service Threading Configuration Defaults
 # 
 threads_core_pool_size=1000
 threads_max_pool_size=1000000
@@ -29,28 +29,30 @@ threads_keep_alive_time=60
 #
 # Pelion Processor configuration
 #
-api_key=Your_Pelion_API_Key_Goes_Here
-mds_enable_long_poll=true
+api_key=Pelion_API_Key_Goes_Here
 api_endpoint_address=api.us-east-1.mbedcloud.com
+unified_format_enabled=true
+mds_enable_long_poll=true
+mds_gw_address=off
 mds_gw_port=28519
 mds_def_ep_type=default
 mds_content_type=application/json
 mds_device_attributes_path=/3/0
 mds_device_attributes_content_type=application/vnd.oma.lwm2m+tlv
-unified_format_enabled=true
 mds_rest_version=2
 mds_long_poll_uri=notification/pull
 mds_gw_context_path=/pelion-bridge
 mds_gw_events_path=/events
 mds_gw_keystore_password=arm1234
-mds_gw_address=off
-
-# Debugging levels (info == lots!!)
-mds_bridge_error_level=warning,critical
-# mds_bridge_error_level=info,warning,critical
 
 #
-# Defaulted bridge device information
+# Debugging levels (info == lots!!)
+#
+# mds_bridge_error_level=info,warning,critical
+mds_bridge_error_level=warning,critical
+
+#
+# Defaulted bridge devinfo (/3/0 for the bridge...)
 #
 mds_bridge_manufacturer=ARM
 mds_bridge_serial_number=0123456789
@@ -59,19 +61,6 @@ mds_bridge_class=Bridge
 mds_bridge_description=arm PELION Device Shadow Bridge
 mds_bridge_firmware_info=v1.0
 mds_bridge_hardware_info=v1.0
-
-#
-# We can add multiple MQTT brokers to interact with here: 
-#   - "iotf" instantiates an IoTF compatible MQTT processor
-#   - "std" instantiates a std MQTT processor
-#   - "-d" establishes the "default" MQTT processor
-#
-# NOTE: MQTT preferences, for multiple brokers will have a suffix appended for each config entry
-#       where the suffix is the index of the broker in the config list (starting with "0" as the first entry.
-#
-#       Each broker configuration is separated by a ";"
-#
-#mqtt_mgr_config=iotf-d;std
 
 #
 # EXPERIMENTAL: Distributed Database Enablement (with MongoDB)
@@ -125,10 +114,8 @@ enable_iotf_addon=false
 # config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;iotf_api_key;iotf_auth_token;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 iotf_device_data_key=d
 iotf_mqtt_port=1883
-iotf_org_id=<ORG_ID GOES HERE>
-iotf_org_key=<IoTF ORG_KEY_GOES_HERE>
-iotf_auth_token=<IoTF AUTH TOKEN GOES HERE>
-iotf_api_key=a-__ORG_ID__-__API_KEY__
+iotf_api_key=Watson_IoT_API_Key_Goes_Here
+iotf_auth_token=Watson_Auth_Token_Goes_Here
 iotf_observe_notification_topic=iot-2/type/__DEVICE_TYPE__/id/__EPNAME__/evt/__EVENT_TYPE__/fmt/json
 iotf_coap_cmd_topic=iot-2/type/__DEVICE_TYPE__/id/__EPNAME__/cmd/__COMMAND_TYPE__/fmt/json
 iotf_client_id_template=a\:__ORG_ID__\:
@@ -150,8 +137,8 @@ iotf_legacy_bridge=false
 #
 enable_iot_event_hub_addon=false
 # config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;iot_event_hub_name;iot_event_hub_sas_token;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
-iot_event_hub_name=IoT_Event_Hub_Name_Goes_Here
-iot_event_hub_sas_token=Valid_SAS_Token_Goes_Here
+iot_event_hub_name=IoT_Hub_Name_Goes_Here
+iot_event_hub_sas_token=IoT_Hub_Owner_SAS_Token_Goes_Here
 iot_event_hub_mqtt_username=__IOT_EVENT_HUB__.azure-devices.net/__EPNAME__
 iot_event_hub_mqtt_password=HostName=__IOT_EVENT_HUB__.azure-devices.net;DeviceId=__EPNAME__;SharedAccessKey=__EPNAME_KEY__
 iot_event_hub_mqtt_ip_address=__IOT_EVENT_HUB__.azure-devices.net
@@ -170,9 +157,9 @@ iot_event_hub_version_tag=api-version=2016-11-14
 #
 enable_aws_iot_gw_addon=false
 # config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;aws_iot_region;aws_iot_access_key_id;aws_iot_secret_access_key;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
-aws_iot_region=AWS_region_goes_here
-aws_iot_access_key_id=AWS_Access_Key_ID_goes_here
-aws_iot_secret_access_key=AWS_Secret_Access_Key_goes_here
+aws_iot_region=AWS_IoT_region_goes_here
+aws_iot_access_key_id=AWS_IoT_Access_Key_ID_Goes_Here
+aws_iot_secret_access_key=AWS_IoT_Secret_Access_Key_Goes_Here
 aws_iot_policy_name=pelion-device-bridge-policy
 aws_iot_policy_document={\"Version\":\"2012-10-17\",\"Statement\":[{\"Action\":[\"iot:*\"],\"Resource\":[\"*\"],\"Effect\":\"Allow\"}]}
 aws_iot_observe_notification_topic=__TOPIC_ROOT__/observation/__DEVICE_TYPE__/__EPNAME__
