adjusted IoTHub API version and set MQTT keep_alive to 120 seconds

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -84,7 +84,7 @@ enable_generic_mqtt_processor=false
 mqtt_port=1883
 mqtt_username=off
 mqtt_password=off
-mqtt_reconnect_sleep_time_ms=15000
+mqtt_reconnect_sleep_time_ms=10000
 mqtt_connect_retries=10
 mqtt_receive_loop_sleep=1
 mqtt_client_id=off
@@ -92,7 +92,7 @@ mqtt_will_message=off
 mqtt_traffic_class=-1
 mqtt_reconnect_retries_max=10
 mqtt_obs_auto_subscribe=true
-mqtt_keep_alive=300
+mqtt_keep_alive=120
 mqtt_use_ssl=false
 mqtt_clean_session=true
 mqtt_default_client_id=off
@@ -145,12 +145,12 @@ iot_event_hub_mqtt_ip_address=__IOT_EVENT_HUB__.azure-devices.net
 iot_event_hub_mqtt_port=1883
 iot_event_hub_observe_notification_topic=devices/__EPNAME__/messages/events/
 iot_event_hub_coap_cmd_topic=devices/__EPNAME__/messages/devicebound/#
-iot_event_hub_api_version=2016-02-03
+iot_event_hub_api_version=2016-11-14
+iot_event_hub_version_tag=api-version=2016-11-14
 iot_event_hub_device_id_url=https://__IOT_EVENT_HUB__.azure-devices.net/devices/__EPNAME__?api-version=__API_VERSION__
-iot_event_hub_add_device_json={ deviceId:"__EPNAME__",status:"enabled",statusReason:""}
+iot_event_hub_add_device_json={deviceId:"__EPNAME__",status:"enabled",connectionState:"Connected",statusReason:""}
 iot_event_hub_enable_device_id_prefix=true
 iot_event_hub_device_id_prefix=mbed 
-iot_event_hub_version_tag=api-version=2016-11-14
 
 #
 # AWS IoT MQTT Peer Processor Add-On
