adjusted IoTHub API version and set MQTT keep_alive to 120 seconds

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -133,7 +133,8 @@ iotf_add_device_template={\"deviceId\":\"__DEVICE_ID__\",\"gatewayId\":\"__GW_ID
 iotf_legacy_bridge=false
 
 #
-# MS IoTHub MQTT Peer Processor Add-On
+# MS IoTHub MQTT Peer Processor Add-On (API Version: 2016-11-14 - adjust both api_version and hub_version_tag
+# NOTE: mqtt_keep_alive must be set to no greater than 120 seconds... Azure will close connections that are older...
 #
 enable_iot_event_hub_addon=false
 # config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;iot_event_hub_name;iot_event_hub_sas_token;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
@@ -148,7 +149,7 @@ iot_event_hub_coap_cmd_topic=devices/__EPNAME__/messages/devicebound/#
 iot_event_hub_api_version=2016-11-14
 iot_event_hub_version_tag=api-version=2016-11-14
 iot_event_hub_device_id_url=https://__IOT_EVENT_HUB__.azure-devices.net/devices/__EPNAME__?api-version=__API_VERSION__
-iot_event_hub_add_device_json={deviceId:"__EPNAME__",status:"enabled",connectionState:"Connected",statusReason:""}
+iot_event_hub_add_device_json={deviceId:"__EPNAME__",status:"enabled",statusReason:""}
 iot_event_hub_enable_device_id_prefix=true
 iot_event_hub_device_id_prefix=mbed 
 
