more corner condition fixes for JSON parsing

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -77,9 +77,9 @@ distributed_db_password=MongoDB_Password_Goes_Here
 # Generic MQTT Peer Processor Configuration
 #
 enable_generic_mqtt_processor=false
-# MQTT: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mqtt_address;mqtt_port;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# MQTT: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mqtt_address;mqtt_port;mqtt_connect_retries;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 # MQTT: mqtt_address=Your_MQTT_broker_IP_address_Goes_Here
-# GETSTARTED: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mqtt_address;mqtt_port;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# GETSTARTED: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mqtt_address;mqtt_port;mqtt_connect_retries;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 # GETSTARTED: mqtt_address=127.0.0.1
 mqtt_port=1883
 mqtt_username=off
@@ -111,7 +111,7 @@ mds_mqtt_request_tag=request
 # IBM Watson IoT MQTT Peer Processor Add-On
 #
 enable_iotf_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;iotf_api_key;iotf_auth_token;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;iotf_api_key;iotf_auth_token;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 iotf_device_data_key=d
 iotf_mqtt_port=1883
 iotf_api_key=Watson_IoT_API_Key_Goes_Here
@@ -137,7 +137,7 @@ iotf_legacy_bridge=false
 # NOTE: mqtt_keep_alive must be set to no greater than 120 seconds... Azure will close connections that are older...
 #
 enable_iot_event_hub_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;iot_event_hub_name;iot_event_hub_sas_token;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;iot_event_hub_name;iot_event_hub_sas_token;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 iot_event_hub_name=IoT_Hub_Name_Goes_Here
 iot_event_hub_sas_token=IoT_Hub_Owner_SAS_Token_Goes_Here
 iot_event_hub_mqtt_username=__IOT_EVENT_HUB__.azure-devices.net/__EPNAME__
@@ -157,7 +157,7 @@ iot_event_hub_device_id_prefix=mbed
 # AWS IoT MQTT Peer Processor Add-On
 #
 enable_aws_iot_gw_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;aws_iot_region;aws_iot_access_key_id;aws_iot_secret_access_key;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;aws_iot_region;aws_iot_access_key_id;aws_iot_secret_access_key;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 aws_iot_region=AWS_IoT_region_goes_here
 aws_iot_access_key_id=AWS_IoT_Access_Key_ID_Goes_Here
 aws_iot_secret_access_key=AWS_IoT_Secret_Access_Key_Goes_Here
@@ -171,7 +171,7 @@ aws_iot_topic_root=mbed
 # Google CloudIoT MQTT Peer Processor Add-On
 #
 enable_google_cloud_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;google_cloud_auth_json;google_cloud_region;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;google_cloud_auth_json;google_cloud_region;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 google_cloud_region=Google_Cloud_Region_Goes_Here
 google_cloud_auth_json=Google_Cloud_Auth_JSON_Goes_Here
 google_cloud_registry_name=PelionDeviceRegistry
