more corner case fixes for partial configuration sanity - Watson

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -133,7 +133,7 @@ iotf_add_device_template={\"deviceId\":\"__DEVICE_ID__\",\"gatewayId\":\"__GW_ID
 # NOTE: mqtt_keep_alive must be set to no greater than 120 seconds... Azure will close connections that are older...
 #
 enable_iot_event_hub_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;iot_event_hub_name;iot_event_hub_sas_token;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;iot_event_hub_name;iot_event_hub_sas_token;iot_event_hub_enable_device_id_prefix;iot_event_hub_device_id_prefix;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 iot_event_hub_name=IoT_Hub_Name_Goes_Here
 iot_event_hub_sas_token=IoT_Hub_Owner_SAS_Token_Goes_Here
 iot_event_hub_mqtt_username=__IOT_EVENT_HUB__.azure-devices.net/__EPNAME__
