more corner case fixes for partial configuration sanity - Watson

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -96,7 +96,6 @@ mqtt_keep_alive=120
 mqtt_use_ssl=false
 mqtt_clean_session=true
 mqtt_default_client_id=off
-mqtt_version=3.0
 mqtt_keystore_pw=arm1234
 mqtt_keystore_basedir=mqtt_keystores
 mqtt_keystore_basename=keystore.jks
@@ -106,6 +105,11 @@ mqtt_import_keystore=false
 mqtt_pubkey_pem_filename=pubkey.pem
 mqtt_mds_topic_root=mbed
 mds_mqtt_request_tag=request
+
+#
+# MQTT Version support
+#
+mqtt_version=3.1.1
 
 #
 # IBM Watson IoT MQTT Peer Processor Add-On
@@ -139,7 +143,6 @@ iot_event_hub_sas_token=IoT_Hub_Owner_SAS_Token_Goes_Here
 iot_event_hub_mqtt_username=__IOT_EVENT_HUB__.azure-devices.net/__EPNAME__
 iot_event_hub_mqtt_password=HostName=__IOT_EVENT_HUB__.azure-devices.net;DeviceId=__EPNAME__;SharedAccessKey=__EPNAME_KEY__
 iot_event_hub_mqtt_ip_address=__IOT_EVENT_HUB__.azure-devices.net
-iot_event_hub_mqtt_port=1883
 iot_event_hub_observe_notification_topic=devices/__EPNAME__/messages/events/
 iot_event_hub_coap_cmd_topic=devices/__EPNAME__/messages/devicebound/#
 iot_event_hub_api_version=2016-11-14
