initial checkin of bridge statistics support

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -57,6 +57,30 @@ mds_bridge_error_level=warning,critical
 mds_max_shadow_create_threads=500
 
 #
+# Health Statistics Configuration (fires every 15 min == 900000 ms)
+#
+heath_check_sleep_time_ms=900000
+webhook_validator_key=webhook_connection
+webhook_validator_description=Webhook Functional
+webhook_validator_interval_ms=900000
+
+database_validator_key=database_connection
+database_validator_description=Database Connection
+database_validator_interval_ms=900000
+
+long_poll_validator_key=long_poll_active
+long_poll_validator_description=Long Poll Functional
+long_poll_validator_interval_ms=900000
+
+mqtt_validator_key=mqtt_connections
+mqtt_validator_description=MQTT Connections
+mqtt_validator_interval_ms=900000
+
+shadow_count_validator_key=shadow_device_count
+shadow_count_validator_description=Shadow Device Count
+shadow_count_validator_interval_ms=900000
+
+#
 # Defaulted bridge devinfo (/3/0 for the bridge...)
 #
 mds_bridge_manufacturer=ARM
@@ -82,9 +106,9 @@ distributed_db_password=MongoDB_Password_Goes_Here
 # Generic MQTT Peer Processor Configuration
 #
 enable_generic_mqtt_processor=false
-# MQTT: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_max_shadow_create_threads;mqtt_address;mqtt_port;mqtt_connect_retries;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# MQTT: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_max_shadow_create_threads;heath_check_sleep_time_ms;mqtt_address;mqtt_port;mqtt_connect_retries;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 # MQTT: mqtt_address=Your_MQTT_broker_IP_address_Goes_Here
-# GETSTARTED: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_max_shadow_create_threads;mqtt_address;mqtt_port;mqtt_connect_retries;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# GETSTARTED: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_max_shadow_create_threads;heath_check_sleep_time_ms;mqtt_address;mqtt_port;mqtt_connect_retries;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 # GETSTARTED: mqtt_address=127.0.0.1
 mqtt_port=1883
 mqtt_username=off
@@ -120,7 +144,7 @@ mqtt_version=3.1.1
 # IBM Watson IoT MQTT Peer Processor Add-On
 #
 enable_iotf_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_max_shadow_create_threads;iotf_api_key;iotf_auth_token;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_max_shadow_create_threads;heath_check_sleep_time_ms;iotf_api_key;iotf_auth_token;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 iotf_device_data_key=d
 iotf_mqtt_port=1883
 iotf_api_key=Watson_IoT_API_Key_Goes_Here
@@ -142,7 +166,7 @@ iotf_add_device_template={\"deviceId\":\"__DEVICE_ID__\",\"gatewayId\":\"__GW_ID
 # NOTE: mqtt_keep_alive must be set to no greater than 120 seconds... Azure will close connections that are older...
 #
 enable_iot_event_hub_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_max_shadow_create_threads;iot_event_hub_connect_string;iot_event_hub_enable_device_id_prefix;iot_event_hub_device_id_prefix;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_max_shadow_create_threads;heath_check_sleep_time_ms;iot_event_hub_connect_string;iot_event_hub_enable_device_id_prefix;iot_event_hub_device_id_prefix;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 iot_event_hub_connect_string=IoT_Hub_Connect_String_Goes_Here
 iot_event_hub_mqtt_username=__IOT_EVENT_HUB__.azure-devices.net/__EPNAME__
 iot_event_hub_mqtt_password=HostName=__IOT_EVENT_HUB__.azure-devices.net;DeviceId=__EPNAME__;SharedAccessKey=__EPNAME_KEY__
@@ -160,7 +184,7 @@ iot_event_hub_device_id_prefix=mbed
 # AWS IoT MQTT Peer Processor Add-On
 #
 enable_aws_iot_gw_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_max_shadow_create_threads;aws_iot_region;aws_iot_access_key_id;aws_iot_secret_access_key;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_max_shadow_create_threads;heath_check_sleep_time_ms;aws_iot_region;aws_iot_access_key_id;aws_iot_secret_access_key;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 aws_iot_region=AWS_IoT_region_goes_here
 aws_iot_access_key_id=AWS_IoT_Access_Key_ID_Goes_Here
 aws_iot_secret_access_key=AWS_IoT_Secret_Access_Key_Goes_Here
@@ -174,7 +198,7 @@ aws_iot_topic_root=mbed
 # Google CloudIoT MQTT Peer Processor Add-On
 #
 enable_google_cloud_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_max_shadow_create_threads;google_cloud_auth_json;google_cloud_region;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_max_shadow_create_threads;heath_check_sleep_time_ms;google_cloud_auth_json;google_cloud_region;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 google_cloud_region=Google_Cloud_Region_Goes_Here
 google_cloud_auth_json=Google_Cloud_Auth_JSON_Goes_Here
 google_cloud_registry_name=PelionDeviceRegistry
