update use of mds_gw_port

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -160,6 +160,9 @@ iotf_add_gw_type_template={\"id\":\"__GW_TYPE_ID__\",\"classId\":\"Gateway\"}
 iotf_add_gw_dev_type_template={\"id\":\"__TYPE_ID__\",\"classId\":\"Device\"}
 iotf_add_gw_template={\"deviceId\":\"__GW_ID__\",\"authToken\":\"__AUTH__\" __DEVICE_INFO__}
 iotf_add_device_template={\"deviceId\":\"__DEVICE_ID__\",\"gatewayId\":\"__GW_ID__\",\"gatewayTypeId\":\"__GW_TYPE_ID__\",\"authToken\":\"__AUTH__\",\"metadata\":__METADATA__ __DEVICE_INFO__}
+iotf_force_app_binding=false
+iotf_legacy_bridge=false
+iotf_use_rti_format=false
 
 #
 # MS IoTHub MQTT Peer Processor Add-On (API Version: 2016-11-14 - adjust both api_version and hub_version_tag
@@ -198,10 +201,10 @@ aws_iot_topic_root=mbed
 # Google CloudIoT MQTT Peer Processor Add-On
 #
 enable_google_cloud_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;heath_check_sleep_time_ms;google_cloud_auth_json;google_cloud_region;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;heath_check_sleep_time_ms;google_cloud_auth_json;google_cloud_region;google_cloud_registry_name;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;threads_keep_alive_time
 google_cloud_region=Google_Cloud_Region_Goes_Here
 google_cloud_auth_json=Google_Cloud_Auth_JSON_Goes_Here
-google_cloud_registry_name=PelionDeviceRegistry
+google_cloud_registry_name=pelionDeviceRegistry
 google_cloud_obs_auto_subscribe=true
 google_cloud_mqtt_host=mqtt.googleapis.com
 google_cloud_mqtt_port=1883
@@ -214,7 +217,12 @@ google_cloud_coap_config_topic=/devices/__EPNAME__/config
 google_cloud_coap_state_topic=/devices/__EPNAME__/state
 google_cloud_key_length=2048
 google_cloud_cert_days_length=100000
-google_cloud_key_create_cmd_template=openssl req -x509 -nodes -newkey rsa:__KEY_LENGTH__ -keyout __PRIV_KEY_FILE__ -days __NUM_DAYS__ -out __CERT_FILE__ -subj /CN=unused
+google_cloud_key_create_cmd_template=openssl req -x509 -nodes -newkey rsa\:__KEY_LENGTH__ -keyout __PRIV_KEY_FILE__ -days __NUM_DAYS__ -out __CERT_FILE__ -subj /CN\=unused
 google_cloud_key_convert_cmd_template=openssl pkcs8 -topk8 -inform PEM -outform DER -in __PRIV_KEY_FILE__ -nocrypt -out __PRIV_KEY_PKCS8__
 google_cloud_topic_root=mbed
 google_wait_for_lock_ms=3500
+mqtt_mgr_config=google_cloud
+google_cloud_sleep_time=1000
+google_cloud_max_messages=2
+google_cloud_topic_slash_delimiter=.
+google_cloud_topic_segment_delimiter=_
