--- a/pom.xml
+++ b/pom.xml
@@ -59,22 +59,22 @@
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-api</artifactId>
-            <version>9.4.12.RC2</version>
+            <version>9.4.11.v20180605</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-servlet</artifactId>
-            <version>9.4.12.RC2</version>
+            <version>9.4.11.v20180605</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-server</artifactId>
-            <version>9.4.12.RC2</version>
+            <version>9.4.11.v20180605</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-util</artifactId>
-            <version>9.4.12.RC2</version>
+            <version>9.4.11.v20180605</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
