Thread count statistic added

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -80,6 +80,10 @@ shadow_count_validator_key=shadow_device_count
 shadow_count_validator_description=Shadow Device Count
 shadow_count_validator_interval_ms=900000
 
+thread_count_validator_key=thread_count
+thread_count_validator_description=Thread Count
+thread_count_validator_interval_ms=900000
+
 #
 # Defaulted bridge devinfo (/3/0 for the bridge...)
 #
