more tuning, added websocket port in configuration file

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -58,7 +58,7 @@ mds_bridge_error_level=warning,critical
 #
 # Health Statistics Configuration (fires every 1 min = 60000 ms)
 #
-heath_check_sleep_time_ms=25000
+heath_check_sleep_time_ms=60000
 webhook_validator_key=webhook_connection
 webhook_validator_description=Webhook Functional
 webhook_validator_interval_ms=10000
@@ -82,6 +82,11 @@ shadow_count_validator_interval_ms=10000
 thread_count_validator_key=thread_count
 thread_count_validator_description=Thread Count
 thread_count_validator_interval_ms=10000
+
+#
+# Websocket Log Streaming Port
+#
+websocket_streaming_port=17362
 
 #
 # Defaulted bridge devinfo (/3/0 for the bridge...)
